# check-auth-puzzle

./: .gitignore  Cargo.toml  cheatsheet  run.sh  snapshot.sh
bun_tests/: README.md  bun.lockb  index.ts  package.json
bun_tests/puzzle-sdk/: README.md  package-lock.json  package.json
bun_tests/puzzle-sdk/src/: index.ts
bun_tests/solver-sdk/: README.md  package-lock.json  package.json
bun_tests/solver-sdk/src/: index.ts
contracts/hello_world/: Cargo.toml  snapshot.json
contracts/hello_world/src/: lib.rs  test.rs
contracts/hello_world/test_snapshots/test/: test.1.json
contracts/puzzle/: Cargo.toml
contracts/puzzle/src/: lib.rs
contracts/solver/: Cargo.toml  snapshot.json
contracts/solver/src/: lib.rs  test.rs
