[package]
name = "solver"
version.workspace = true
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
puzzle = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
puzzle = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
stellar-strkey = { workspace = true }